stylesheet.css
body {
    background-color: #ffffff;
    color: #4d4d4c;
    font-family: sans-serif;
    margin: 0 auto;
    padding: 0;
}

:is(p, h2, h3, h4, h5, h6){
    margin: 1% 10% 1% 10%;
}

.center-image {
    display: block;
    margin-right: auto;
    margin-left: auto;
    max-width: 100%;
    height: auto;
}

img {
    margin: 2%;
}

ul {
    display: flex;
    flex-direction: row;
    align-items: center;
    background-color: #eab700;
    width: 100%;
    justify-content: space-around;
    padding: 1%;
}

li {
    list-style: none;
    color: #4271ae;
    font-size: 1em;
    font-weight: bold;
}

a {
    text-decoration: none;
}

a:hover {
    text-decoration: underline;
    color: #3e999f;
}

@media only screen and (max-width: 800px) {
    ul {
	flex-direction: column;
    }
    :is(p, h2, h3, h4, h5, h6){
	margin: 1%;
    }
}

